Refactor: improve code organization and reduce duplication
- Add domain error types (AmuxError, GitError, AgentError) with thiserror
- Extract event handlers into handlers/ module (agent, permission, question, keyboard)
- Create generic Picker<T> trait eliminating duplicate selection logic across 6 picker types
- Add session state machine validation with can_transition_to() and transition_to()
- Create services/ module with RepositoryService and CommandDispatcher
- Add helper methods for session state queries (has_pending_permission, is_awaiting_user, etc.)

This refactoring improves:
- Code organization by grouping logic by responsibility
- Testability through extracted services and handlers
- Extensibility for adding new pickers, agents, or commands
- Maintainability by reducing code duplication

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
 tokio = { version = "1", features = ["full", "process"] }
 tokio-util = { version = "0.7", features = ["codec"] }
 anyhow = "1"
+thiserror = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 futures = "0.3"
@@ -20,3 +21,4 @@ agent-client-protocol = "0.9"
 arboard = "3"
 base64 = "0.22"
 image = { version = "0.25", default-features = false, features = ["png"] }
+similar = "2"
