--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
             arch: aarch64-linux
           - os: macos-latest
             arch: aarch64-darwin
-          - os: macos-13
+          - os: macos-15-intel
             arch: x86_64-darwin
     runs-on: ${{ matrix.os }}
     steps:
@@ -47,7 +47,7 @@ jobs:
         include:
           - os: macos-latest
             arch: arm64
-          - os: macos-13
+          - os: macos-15-intel
             arch: amd64
     runs-on: ${{ matrix.os }}
     steps:
