feat: add desktop notifications, improve thought display, and cancel prompt support
- Add desktop notifications for permission requests, questions, and idle sessions
  - New notification.rs module with NotificationManager
  - Configurable via [notifications] section in config.toml
  - Deduplication to prevent notification spam

- Improve agent thought/thinking display
  - Show current thought in title bar with 'Thinking:' prefix
  - Thoughts now replace rather than append (set_thought vs append_thought)
  - Finalize thoughts when non-thought content arrives
  - Render thoughts as markdown with gold italic styling

- Add cancel prompt functionality
  - Press Esc in normal mode to cancel running prompt
  - Shows 'Cancelled' system message

- Improve agent picker navigation
  - Skip unavailable agents when navigating with j/k
  - Add select_next_available/select_prev_available methods

- Auto-scroll to bottom when sending new prompt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ arboard = "3"
 base64 = "0.22"
 image = { version = "0.25", default-features = false, features = ["png"] }
 similar = "2"
+notify-rust = "4"
